# agentScopeDemo

./: .gitignore  2026-03-24-context-package-memory-update-design.md  README.md  main.py  pyproject.toml  raw_model_stream_demo.py
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: __init__.py  factory.py  litellm_context.py  mcp_registry.py  mcp_trace.py  request_params.py  session_manager.py
app/api/: __init__.py  routes.py
app/execution/: __init__.py  context_compiler.py  context_package.py  errors.py  manager.py  memory_state.py  memory_summary.py  memory_window.py  models.py  registry.py  store.py  stream_adapter.py
app/security/: rsa_aes_crypto_service_helper.py  rsa_crypto_service_helper.py  secure_jwt_handler.py  security_manager.py
app/skills/: create_skiil.py  create_skill.py  register_agent_skills.py
app/skills/Text2Sql_skill/: SKILL.md
app/skills/intelligent_dispatching/: SKILL.md
app/skills/quantity_skill/: SKILL.md
app/skills/sample_skill/: SKILL.md
app/tools/: __init__.py  safe_python.py  skill_file_reader.py  sqlserver.py
config/: model_request.toml
docs/superpowers/plans/: 2026-03-24-context-package-memory-phase-1.md  (+4 more)
tests/: test_api_executions.py  test_api_stream.py  test_config.py  test_context_compiler.py  test_context_package.py  test_execution_manager.py  test_execution_registry.py  test_execution_store.py  test_factory.py  test_generate_token.py  test_litellm_context.py  test_mcp_trace.py  test_request_params.py  test_safe_python.py  test_schemas.py  test_session_manager.py  test_skill_file_reader.py
(+3 files in other folders)
